<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_menu_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_fiber_new_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_laptop_mac_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_prognose"
            android:icon="@drawable/ic_baseline_trending_up_24"
            android:title="@string/menu_prognoses" />
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_baseline_text_format_24"
            android:title="@string/terms" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
    </group>
</menu>