<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorOnPrimary"
    tools:context=".ui.settings.SettingsFragment" >

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorSecondary"
        android:text="@string/theme"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/settings_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp">

        <RadioButton
            android:id="@+id/light_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_theme" />

        <RadioButton
            android:id="@+id/dark_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorSecondary"
        android:text="@string/language"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/language_group"
        android:layout_marginStart="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/russian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/russian" />

        <RadioButton
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english" />

    </RadioGroup>

</LinearLayout>