<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".RootFragment" >

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_id"
            android:layout_gravity="bottom" />
    </FrameLayout>
</layout>